cluster/apps/media/nextology/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nextology
  namespace: media
subsets:
- addresses:
  - ip: 192.168.100.55
  ports:
  - port: 8081
