cluster/apps/media/nextology/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextology
  namespace: media
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
      name: http
